# myFirstGame

NewGame/NewGame/: CMakeLists.txt  gamewindow.cpp  gamewindow.h  image.qrc
NewGame/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
NewGame/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
NewGame/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/NewGame_autogen/: deps
NewGame2/NewGame/: CMakeLists.txt  enemy.cpp  enemy.h  enemybase.cpp  enemybase.h  fence.h  gamewindow.cpp  gamewindow.h  image.qrc  mainwindow.ui
NewGame2/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  build.ninja
NewGame2/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
NewGame3/NewGame/: enemy.cpp  enemy.h  fence.cpp  gamewindow.cpp  image.qrc  mainwindow.cpp  map.cpp
NewGame3/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  build.ninja
NewGame3/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
NewGame3/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/NewGame_autogen/: deps
NewGame4/NewGame/: CMakeLists.txt  enemy.cpp  gamewindow.cpp  gamewindow.h  image.qrc  melee.cpp  melee.h  mybase.cpp  mybase.h  soldiers.cpp  soldiers.h
NewGame4/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  build.ninja
NewGame4/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
NewGame4/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/NewGame_autogen/: deps
NewGame5/NewGame/: CMakeLists.txt  base.cpp  base.h  enemy.cpp  enemy.h  enemybase.cpp  enemybase.h  firstkindtower.cpp  firstkindtower.h  gamewindow.cpp  gamewindow.h  image.qrc  melee.cpp  melee.h  mybase.cpp  mybase.h  select.cpp  select.h  soldiers.cpp  tower.cpp  tower.h  towerbase.cpp  towerbase.h
NewGame5/build-NewGame-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja
NewGame6/: CMakeLists.txt  base.cpp  base.h  enemy.cpp  enemybase.cpp  enemybase.h  enemyplane.cpp  enemyplane.h  enemysorcerer.cpp  enemysorcerer.h  firstkindtower.cpp  firstkindtower.h  flyobject.cpp  flyobject.h  gamewindow.cpp  gamewindow.h  image.qrc  mainwindow.cpp  map.h  maulers.cpp  maulers.h  melee.cpp  melee.h  mybase.cpp  mybase.h  myplane.cpp  myplane.h  secondkindtower.cpp  secondkindtower.h  select.cpp  select.h  soldiers.cpp  thirdkindtower.cpp  thirdkindtower.h  tower.cpp  tower.h  towerbase.cpp  towerbase.h
(+171 files in other folders)
